--- a/llama-internal-api/package.json
+++ b/llama-internal-api/package.json
@@ -6,16 +6,20 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon index.js"
   },
   "author": "Patrick Kalkman",
   "license": "MIT",
   "dependencies": {
     "@fastify/sensible": "^5.6.0",
+    "axios": "^1.7.2",
     "fastify": "^4.27.0",
     "fastify-print-routes": "^3.2.0",
     "pino": "^9.1.0",
     "pino-pretty": "^11.0.0",
     "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
