--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,4 +18,6 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - llm_cpp      
+      - llm_cpp
+    environment:
+      - DISABLE_AUTH=false
