--- a/llama-internal-api/package.json
+++ b/llama-internal-api/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@fastify/sensible": "^5.6.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "fastify-print-routes": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
+    "node-cache": "^5.1.2",
     "pino": "^9.1.0",
-    "pino-pretty": "^11.0.0",
-    "uuidv4": "^6.2.13"
+    "pino-pretty": "^11.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
